--- a/ui/package.json
+++ b/ui/package.json
@@ -1,13 +1,29 @@
 {
 	"name": "what-tracks",
-	"description": "What Tracks frontend",
+	"private": true,
 	"version": "0.0.1",
+	"type": "module",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
 	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/monatheoctocat/my_package.git"
+	"dependencies": {
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
 	},
-	"author": "Mason Miller"
+	"devDependencies": {
+		"@eslint/js": "^9.17.0",
+		"@types/react": "^18.3.18",
+		"@types/react-dom": "^18.3.5",
+		"@vitejs/plugin-react": "^4.3.4",
+		"eslint": "^9.17.0",
+		"eslint-plugin-react-hooks": "^5.0.0",
+		"eslint-plugin-react-refresh": "^0.4.16",
+		"globals": "^15.14.0",
+		"typescript": "~5.6.2",
+		"typescript-eslint": "^8.18.2",
+		"vite": "^6.0.5"
+	}
 }
